--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             </ul>
             <div>
                 <div class="total">Sub Total: <span class="sub-total">$0</span></div>
+                <a href="checkout.html"><button>Buy Now</button></a>
                 <button>Check out</button>
             </div>
 
